# Modules/AdminModule/openapi.g.yaml
@@ -408,4 +408,32 @@ components:
         name:
           type: string
       x-lz-genrepo: true
+    Message:
+      type: object
+      properties:
+        id:
+          type: string
+        body:
+          type: string
+        premiseId:
+          type: string
+        createUtcTick:
+          type: integer
+          format: int64
+        updateUtcTick:
+          type: integer
+          format: int64
+    Premise:
+      type: object
+      properties:
+        id:
+          type: string
+        body:
+          type: string
+        createUtcTick:
+          type: integer
+          format: int64
+        updateUtcTick:
+          type: integer
+          format: int64
 ...
